# ericabertugli.github.io

./: .gitignore  .htmlvalidate.json  .pa11yci  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  cats.html  cookie-consent.js  developer.html  index.html  manifest.json  package-lock.json  package.json  robots.txt  sitemap.xml  skating.html  sw.js  traveling.html
.github/: CODEOWNERS
.github/workflows/: deploy.yml  lighthouse-audit.yml  link-check.yml  test.yml  update-map-data.yml  update-sitemap.yml  update-travel-map.yml
.well-known/: security.txt
assets/css/: cookie-consent.css
data/: drinking_water.geojson  frequent_routes.geojson  routes.geojson  skate_pois.geojson  skating_routes.db
data/cache/: geocode-cache.json
data/geojson/: travel-points.geojson  travel-regions-simplified.geojson
data/kml/: travelmap.kml  travelmap_link.kml
docs/: about_adding_react.md  monitoring.md  next  seo_implementation_plan.md  skating-heatmap-implementation.md  slope-enrichment-plan.md
pages/: developer.html  privacy-policy.html  skating.html  traveling.html
scripts/: generate-travel-geojson.js
scripts/skatingmap/: README.md  fetch_drinking_water.py  fetch_skate_pois.py  (+4 more)
tools/skatingmap/: README.md  pyproject.toml
tools/skatingmap/queries/: pedestrian_ways.overpassql
tools/skatingmap/src/: csv_to_heatmap.py  enrich_slopes.py  export_geojson.py  fetch_drinking_water.py  fit_to_h3.py  generate_heatmap.py  geo_utils.py  models.py  overpass_to_db.py
tools/skatingmap/tests/: conftest.py  test_fit_to_h3.py  test_geojson_output.py  test_scripts.py  test_slopes.py
(+20 files in other folders)
